--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Bibars</title>
 </head>
 <body>
-    <h1>Welcome to My Personal Website</h1>
-    <p>I am a researcher specializing in IoT.</p>
+    <h1>Welcome</h1>
+    <p>I am a researcher specializing in R&D</p>
     <h2>Links</h2>
     <ul>
         <li><a href="your-scopus-link">Scopus Profile</a></li>
