--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <p>I am a researcher specializing in R&D</p>
     <h2>Links</h2>
     <ul>
-        <li><a href="your-scopus-link">Scopus Profile</a></li>
-        <li><a href="your-orcid-link">ORCID Profile</a></li>
+        <li><a href="https://www.scopus.com/authid/detail.uri?authorId=57239012100">Scopus Profile</a></li>
+        <li><a href="https://www.scopus.com/authid/detail.uri?authorId=57239012100">ORCID Profile</a></li>
     </ul>
 </body>
 </html>
