--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bibars</title>
+    <title>BB</title>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <p>I am a researcher specializing in R&D</p>
+    <h1></h1>
+    <p>R&D</p>
     <h2>Links</h2>
     <ul>
         <li><a href="https://www.scopus.com/authid/detail.uri?authorId=57239012100">Scopus Profile</a></li>
-        <li><a href="https://www.scopus.com/authid/detail.uri?authorId=57239012100">ORCID Profile</a></li>
+        <li><a href="https://orcid.org/0000-0002-4089-6337">ORCID Profile</a></li>
     </ul>
 </body>
 </html>
